wip dashboard download endpoint
